tests/invalid/units_discriminator_C_is_coulomb.esm
{
  "esm": "0.8.0",
  "metadata": {
    "name": "UnitsDiscriminatorCIsCoulomb",
    "description": "Invalid: `C` is the COULOMB (current x time), NOT Celsius. `bad_temp` is declared in `K` (a temperature) but its expression is `charge`, which is in `C`. A correct binding rejects: coulomb is not a temperature. A binding that resolved `C` to Celsius computes a TEMPERATURE and ACCEPTS. This is the NEGATIVE half of the discriminator in tests/valid/units_registry_grammar.esm. A VALID fixture can only prove a binding does not FALSELY REJECT; it CANNOT prove the binding checks anything -- mutation testing showed every observed variable in the valid fixture could be corrupted and still pass, because no binding compared a declared unit against the dimension its expression computes. This file makes the same assertion in the contrapositive: a CORRECT binding REJECTS it, and a binding carrying the bug ACCEPTS it. Everything but the one observed variable is dimensionally clean.",
    "authors": [
      "EarthSciML"
    ],
    "created": "2026-07-14T00:00:00Z"
  },
  "models": {
    "BadUnitsModel": {
      "variables": {
        "y": {
          "type": "state",
          "units": "1",
          "description": "State. Dimensionally clean; not part of the defect."
        },
        "k": {
          "type": "parameter",
          "units": "1/s",
          "default": 1.0,
          "description": "Decay rate. Dimensionally clean; not part of the defect."
        },
        "charge": {
          "type": "parameter",
          "units": "C",
          "default": 1.0,
          "description": "Electric charge in coulombs."
        },
        "bad_temp": {
          "type": "observed",
          "units": "K",
          "description": "THE ONLY DEFECT: declared units do not match the dimension its expression computes.",
          "expression": "charge"
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": [
              "y"
            ],
            "wrt": "t"
          },
          "rhs": {
            "op": "*",
            "args": [
              {
                "op": "-",
                "args": [
                  "k"
                ]
              },
              "y"
            ]
          }
        }
      ]
    }
  }
}
